--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ a {
 .grid-container {
     margin-top: 3em;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1.5em;
 }
 
@@ -89,6 +89,7 @@ a {
     padding: 15px;
     background-color: white;
     border-radius: 2em;
+    cursor: pointer;
 }
 
 .editor-opts img {
@@ -97,7 +98,7 @@ a {
     object-fit: contain;
 }
 
-.text {
+.meme-text {
 grid-column: 1 / -1;
 }
 
