--- a/css/header.css
+++ b/css/header.css
@@ -1,46 +1,70 @@
 .main-header{
     width: 100%;
-    background-color: var(--clr-main);
+    background-color: var(--clr-secondary);
     padding: 1em;
     height: 100px;
+    justify-content: space-between;
 }
 
-.main-header > img{
+.main-header > img:first-child{
     align-self: center;
     width: 250px;
     height: fit-content;
     object-fit: cover;
+    cursor: pointer;
 }
 
 .main-header div{
-    justify-content: flex-end;
-    width: 100%;
-    margin-inline-end: 2em;
+    position: fixed;
+    height: 50%;
+    top: 100px;
+    right: 0;
+    width: 45%;
+    background-color: var(--clr-secondary);
+    justify-content: center;
+    overflow: hidden;
 }
 
 .main-header ul{
+    flex-direction: column;
     justify-content: space-between;
     margin: 0;
     padding: 0;
+    width: 100%;
     height: 100%;
     align-items: center;
 }
 
 .main-header ul>li{
-    padding-right: 0.5em;
-    margin-inline-start: 0.5em;
-    font-size: 1.5em;
-    border-inline-end: 1.5px solid var(--clr-secondary) ;
+    text-align: center;
+    font-size: 1em;
+    height: 100%;
+    width: 100%;
+    padding-top: 20px;
+    cursor: pointer;
+}
+
+.main-header ul>li:hover{
+    box-shadow: inset 0px -3px var(--clr-main)
 }
 
 .main-header a{
+    cursor: pointer;
     transition: 0.2s;
+    color: var(--clr4);
 }
 
 .main-header a:hover{
-    color: var(--clr3);
+    color: var(--clr-main);
+    
+
 }
 
 .main-header ul>li:last-child{
     border-inline-end: none
 }
+
+/* .user-opts{ */
+    /* height: 60px; */
+    /* align-self: flex-end; */
+/* } */
