--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,13 @@
 
 html {
     font-size: 18px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 body {
     margin: 0;
+    background-color: rgb(225, 225, 225);
+
 
 }
 
@@ -23,49 +25,68 @@ a {
 
 
 .filter-section {
+    display: flex;
     width: 100%;
-    background-color: var(--clr-secondary);
-    padding: 0.5em;
+    background-color: var(--clr-main);
+    padding: 1.5em;
+    height: 80px;
+    align-items: center;
+}
+
+.filter-section input {
+    height: 50%;
+    color: black;
+    background-color: var(--clr-main);
+    border: 0;
+    border-bottom: 1px solid var(--clr-secondary);
 }
 
 .grid-container {
     margin-top: 3em;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1.5em;
+    margin-bottom: 40px;
 }
 
 
-.grid-container>img {
+.grid-container img {
     width: 100%;
     height: 100%;
     cursor: pointer;
+    transition: 0.2s;
+}
+
+.grid-container img:hover {
+    transform: scale(1.01);
+    box-shadow: 5px 5px 10px 5px #888888;
 }
 
 .editor {
-    position: fixed;
-    top: 100px;
-    left: 0;
+    min-height: 600px;
     width: 100%;
-    min-height: 100%;
-    background-color: bisque;
+    padding: 15px;
+    background-color: var(--clr3);
 }
 
+
 .editor-container {
+    margin-top: 2em;
     display: flex;
-    margin-top: 80px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .canvas-container {
-    flex-basis: 50%;
     width: 400px;
     height: 400px;
+    margin-inline-end: 3em;
+    margin-bottom: 3em;
 }
 
 
 .editor-opts {
-    margin-inline-start: 50px;
-    flex-basis: 50%;
     display: grid;
     height: fit-content;
     grid-template-columns: repeat(5, 50px);
@@ -73,21 +94,24 @@ a {
     gap: 1em;
     align-items: center;
     justify-content: center;
+    margin-bottom: 3em;
 }
 
-.editor-opts > input, select{
+.editor-opts input,
+select {
+    background-color: var(--clr-secondary);
     border: 0;
     height: 30px;
     border-radius: 2em;
     padding-inline-start: 15px;
 }
 
-.editor-opts >  button{
+.editor-opts button {
     max-height: 50px;
     max-width: 50px;
     border: 0;
     padding: 15px;
-    background-color: white;
+    background-color: var(--clr-secondary);
     border-radius: 2em;
     cursor: pointer;
 }
@@ -99,10 +123,99 @@ a {
 }
 
 .meme-text {
-grid-column: 1 / -1;
+    grid-column: 1 / -1;
 }
 
-.font{
+.font {
     grid-column: span 3;
 }
 
+.stroke-clr {
+    position: relative;
+}
+
+.stroke-clr button,
+.stroke-clr input {
+    position: absolute;
+    transform: translate(0, -50%);
+}
+
+.stroke-clr input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.font-clr button,
+.font-clr input {
+    position: absolute;
+    transform: translate(0, -50%);
+}
+
+.font-clr input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.main-footer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 200px;
+    background-color: var(--clr-main);
+    padding: 20px;
+}
+
+.main-footer img {
+    width: 150px;
+    height: fit-content;
+    object-fit: cover;
+}
+
+/* Tablet */
+@media (min-width: 650px) {
+    .main-header .list {
+        position: static;
+        width: fit-content;
+        margin-inline-end: 0.5em;
+        background-color: var(--clr-secondary);
+        height: 80px;
+
+    }
+
+    .main-header ul {
+        flex-direction: row;
+        width: fit-content;
+        height: fit-content;
+
+    }
+
+    .main-header ul>li {
+        display: flex;
+        padding-right: 0.5em;
+        margin-inline-start: 0.5em;
+        margin-bottom: 0;
+        width: fit-content;
+        height: 10px;
+    }
+
+    .main-header ul>li:hover {
+        box-shadow: none;
+    }
+
+    .user-opts {
+        display: none;
+    }
+}
+
+/* Desktop */
+@media (min-width: 950px) {
+    .editor div {
+        flex-direction: row;
+    }
+
+    /* .main-footer{ */
+    /* position: absolute; */
+    /* } */
+}
