--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ button {
 .grid-container {
     margin-top: 3em;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 0.3fr));
     gap: 1.5em;
     margin-bottom: 40px;
 }
@@ -83,6 +83,7 @@ button {
     height: 100%;
     cursor: pointer;
     transition: 0.2s;
+    border-radius: 1.5em;
 }
 
 .grid-container img:hover {
