--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
 @import url(vars.css);
 @import url(helpers.css);
 @import url(header.css);
+@import url(footer.css);
+@import url(gallery.css);
+@import url(editor.css);
+@import url(mq.css);
 
 * {
     box-sizing: border-box;
@@ -8,7 +12,7 @@
 
 html {
     font-size: 18px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Urbanist', sans-serif;
 }
 
 body {
@@ -29,258 +33,4 @@ button {
 
 
 
-.filter-section {
-    display: flex;
-    width: 100%;
-    background-color: var(--clr-main);
-    padding: 1.5em;
-    min-height: 80px;
-    align-items: center;
-    justify-content: space-around;
-}
 
-.filter-section input {
-    height: 50%;
-    color: black;
-    background-color: var(--clr-main);
-    border: 0;
-    border-bottom: 1px solid var(--clr-secondary);
-}
-
-.filter-section button {
-    background-color: rgb(142, 80, 171);;
-    border: 0;
-    padding: 0.5em;
-    font-size: 15px;
-    border-radius: 1em;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-}
-
-.filter-section button:hover{
-    color: var(--clr-secondary);
-}
-
-.sort-opts span {
-    margin-inline-end: 15px;
-    cursor: pointer;
-}
-
-.sort-opts span:hover{
-    color: var(--clr-secondary);
-}
-
-.grid-container {
-    margin-top: 3em;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 0.3fr));
-    gap: 1.5em;
-    margin-bottom: 40px;
-}
-
-
-.grid-container img {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    transition: 0.2s;
-    border-radius: 1.5em;
-}
-
-.grid-container img:hover {
-    transform: scale(1.01);
-    box-shadow: 5px 5px 10px 5px #888888;
-}
-
-.editor {
-    min-height: 600px;
-    width: 100%;
-    padding: 15px;
-    background-color: var(--clr3);
-}
-
-
-.editor-container {
-    margin-top: 2em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.canvas-container {
-    width: 400px;
-    height: 400px;
-    margin-bottom: 3em;
-}
-
-
-.editor-opts {
-    display: grid;
-    height: fit-content;
-    grid-template-columns: repeat(5, 50px);
-    grid-template-rows: repeat(4, 50px);
-    gap: 1em;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    margin-bottom: 3em;
-}
-
-.editor-opts input,
-select {
-    background-color: var(--clr-secondary);
-    border: 0;
-    height: 30px;
-    border-radius: 2em;
-    padding-inline-start: 15px;
-}
-
-.editor-opts button {
-    max-height: 50px;
-    max-width: 50px;
-    border: 0;
-    padding: 15px;
-    background-color: var(--clr-secondary);
-    border-radius: 2em;
-    cursor: pointer;
-}
-
-.editor-opts img {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-}
-
-.meme-text {
-    grid-column: 1 / -1;
-}
-
-.font {
-    grid-column: span 3;
-}
-
-.stroke-clr {
-    position: relative;
-}
-
-.stroke-clr button,
-.stroke-clr input {
-    position: absolute;
-    transform: translate(0, -50%);
-}
-
-.stroke-clr input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-}
-
-.font-clr button,
-.font-clr input {
-    position: absolute;
-    transform: translate(0, -50%);
-}
-
-.font-clr input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-}
-
-.local-btns {
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    gap: 0.8em
-}
-
-.local-btns button {
-    font-size: 15px;
-    padding: 0.5em;
-    background-color: var(--clr-main);
-    border: none;
-    border-radius: 0.6em;
-    color: white;
-}
-
-.local-btns>:first-child {
-    background-color: rgb(161, 38, 218);
-
-}
-
-.local-btns>:last-child {
-    background-color: rgb(27, 122, 216);
-
-}
-
-.main-footer {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 200px;
-    background-color: var(--clr-main);
-    padding: 20px;
-}
-
-.main-footer img {
-    width: 150px;
-    height: fit-content;
-    object-fit: cover;
-}
-
-
-
-
-
-
-/* Tablet */
-@media (min-width: 650px) {
-    .main-header .list {
-        position: static;
-        width: fit-content;
-        margin-inline-end: 0.5em;
-        background-color: var(--clr-secondary);
-        height: 80px;
-
-    }
-
-    .main-header ul {
-        flex-direction: row;
-        width: fit-content;
-        height: fit-content;
-
-    }
-
-    .main-header ul>li {
-        display: flex;
-        padding-right: 0.5em;
-        margin-inline-start: 0.5em;
-        margin-bottom: 0;
-        width: fit-content;
-        height: 10px;
-    }
-
-
-    .canvas-container {
-        margin-inline-end: 3em;
-    }
-
-    .main-header ul>li:hover {
-        box-shadow: none;
-    }
-
-    .user-opts {
-        display: none;
-    }
-}
-
-/* Desktop */
-@media (min-width: 950px) {
-    .editor div {
-        flex-direction: row;
-    }
-
-    /* .main-footer{ */
-    /* position: absolute; */
-    /* } */
-}
