--- a/css/editor.css
+++ b/css/editor.css
@@ -21,10 +21,8 @@
 .canvas-container {
     width: 400px;
     min-height: 400px;
-    margin-bottom: 3em;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 
@@ -118,7 +116,7 @@
     gap: 0.8em
 }
 
-.local-btns button {
+.local-btns > button{
     font-size: 15px;
     padding: 0.5em;
     background-color: var(--clr-main);
@@ -132,11 +130,27 @@
 
 }
 
-.local-btns>:last-child {
+.local-btns>:nth-child(3) {
     background-color: rgb(27, 122, 216);
 
 }
 
 .btn-upload-file {
     grid-column: span 5;
+}
+
+.editor .msg-container{
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.flash-msg {
+    width: fit-content;
+    padding: 0.5em;
+    background-color: var(--clr-main);
+    border-radius: 1em;
+    color: white;
+    transition: 0.3s;
+    opacity: 0;
 }
