--- a/css/gallery.css
+++ b/css/gallery.css
@@ -58,7 +58,7 @@
 .grid-container {
     margin-top: 1em;
     display: grid;
-    grid-template-columns: repeat(2, minmax(200px, 1fr));
+    grid-template-columns: repeat(2, minmax(150px, 1fr));
     gap: 0.5em;
     margin-bottom: 40px;
     align-items: center;
@@ -73,6 +73,12 @@
     transition: 0.2s;
     border-radius: 1.5em;
     object-fit: cover;
+}
+
+.grid-container img:hover {
+    transform: scale(1.01);
+    box-shadow: 3px 3px 8px 2px #888888;
+    opacity: 90%;
 }
 
 .grid-container img.xxs{
@@ -99,9 +105,6 @@
 }
 
 
-.grid-container img:hover {
-    transform: scale(1.01);
-    box-shadow: 5px 5px 10px 5px #888888;
-}
+
 
 
