--- a/css/mq.css
+++ b/css/mq.css
@@ -37,6 +37,11 @@
     .user-opts {
         display: none;
     }
+
+    .canvas-container {
+        margin-inline-start: 0;
+        margin-bottom: 2em;
+    }
 }
 
 
@@ -52,12 +57,14 @@
     }
 
     .canvas-container {
+        margin-inline-start: 0 ;
         margin-inline-end: 5em;
+        margin-bottom: 2em;
     }
 }
 
 @media (max-width: 450px) {
     .grid-container {
-        grid-template-columns: repeat(1, minmax(200px, 1fr));
+        grid-template-columns: repeat(2, minmax(200px, 1fr));
     }
 }
